transition and trasformation addeda

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Neymar came into prominence at Santos, where he made his professional debut aged
                 </div>
                 <div class="player">
                     <img src="images/players/player-6.png" alt="">
-                    <h2>Messi</h2>
+                    <h2>Mauro Icardi</h2>
                     <p>
                         A football player or footballer is a sportsperson who plays one of the different types of football. The main types of football are association football, American football, Canadian football, Australian rules football, Gaelic football, rugby league and rugby union.
                     </p>
@@ -114,7 +114,7 @@ Neymar came into prominence at Santos, where he made his professional debut aged
                 </div>
                 <div class="player">
                     <img src="images/players/player-8.png" alt="">
-                    <h2>Messi</h2>
+                    <h2>Kylian Mbappé</h2>
                     <p>
                         A football player or footballer is a sportsperson who plays one of the different types of football. The main types of football are association football, American football, Canadian football, Australian rules football, Gaelic football, rugby league and rugby union.
                     </p>
